# ChatGPT-study1

./: .env.example  README.md  dsl.txt  main.ipynb  main.py  pyproject.toml  qa.md  requirements.txt
dslchat/: __init__.py  _version.py  openai.py
utils/: openai.py
