[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dslchat"
description = "DSLをChatGPTに読み込ませて、DSLに則した回答をさせるデモ。"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
exclude = ["build", "tests"]

[tool.setuptools.dynamic]
version = {attr = "dslchat.version"}

[tool.setuptools_scm]
write_to = "dslchat/_version.py"